--- a/index.html
+++ b/index.html
@@ -1,167 +1,219 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
 
     <title>Newsweek - News, Analysis, Politics, Business, Technology</title>
-  </head>
-  <body>
+</head>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
-                <div class="row">4</div>
-                <div class="row">5</div>
-                <div class="row">6</div>
-                <div class="row">7</div>
-                <div class="row">8</div>
-                <div class="row">9</div>
-                <div class="row">10</div>
-                <div class="row">11</div>
-                <div class="row">12</div>
+<body>
+
+    <div class="container-fluid">
+        <div class="row" style="position: sticky; position: -webkit-sticky; top: 0; background-color: red;">
+            <div class="col-9">Logo</div>
+            <div class="col">Login</div>
+            <div class="col">Subscribe</div>
+            <div class="col">Nav</div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">U.S</div>
+                <div class="col">World</div>
+                <div class="col">Business</div>
+                <div class="col">Tech & Science</div>
+                <div class="col">Culture</div>
+                <div class="col">Newsgeek</div>
+                <div class="col">Sports</div>
+                <div class="col">Health</div>
+                <div class="col">The Debate</div>
+                <div class="col">Vantage</div>
+                <div class="col">Weather</div>
+                <div class="col">Search</div>
             </div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">
-                    <div class="col">2</div>
-                    <div class="col">2</div>
-                    <div class="col">2</div>
+            <div class="row">
+                <div class="col">Trending</div>
+                <div class="col">Joe Biden</div>
+                <div class="col">Donald Trump</div>
+                <div class="col">2020 Election</div>
+                <div class="col">Coronavirus</div>
+                <div class="col">Stimulus Package</div>
+            </div>
+        </div>
+
+
+
+
+        <div class="container" style="margin-top: 20px;">
+            <div class="row">
+                <div class="col">Featured Stories</div>
+                <div class="col">Top Story</div>
+                <div class="col">The Debate</div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                    <div class="row">4</div>
+                    <div class="row">5</div>
+                    <div class="row">6</div>
+                    <div class="row">7</div>
+                    <div class="row">8</div>
+                    <div class="row">9</div>
+                    <div class="row">10</div>
+                    <div class="row">11</div>
+                    <div class="row">12</div>
                 </div>
-                <div class="row">
-                    <div class="col">3</div>
-                    <div class="col">3</div>
-                    <div class="col">3</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">
+                        <div class="col">2</div>
+                        <div class="col">2</div>
+                        <div class="col">2</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">3</div>
+                        <div class="col">3</div>
+                        <div class="col">3</div>
+                    </div>
+                </div>
+                <div class="col">1</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">Logo - In The Magazine</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">3</div>
+                <div class="col">4</div>
+            </div>
+            <div class="row">
+                <div class="col">5</div>
+                <div class="col">6</div>
+                <div class="col">7</div>
+                <div class="col"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">Logo - Editor's Pick</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">3</div>
+                <div class="col">4</div>
+            </div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">3</div>
+                <div class="col">4</div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">U.S</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
                 </div>
             </div>
-            <div class="col">1</div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">Logo - In The Magazine</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">3</div>
-            <div class="col">4</div>
-        </div>
-        <div class="row">
-            <div class="col">5</div>
-            <div class="col">6</div>
-            <div class="col">7</div>
-            <div class="col"></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">Logo - Editor's Pick</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">3</div>
-            <div class="col">4</div>
-        </div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">3</div>
-            <div class="col">4</div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">U.S</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">World</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">World</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">Business</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">Business</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">Tech & Science</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">Tech & Science</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">Culture</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">Culture</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">Sports</div>
+            <div class="row">
+                <div class="col">1</div>
+                <div class="col">2</div>
+                <div class="col">
+                    <div class="row">1</div>
+                    <div class="row">2</div>
+                    <div class="row">3</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row">Sports</div>
-        <div class="row">
-            <div class="col">1</div>
-            <div class="col">2</div>
-            <div class="col">
-                <div class="row">1</div>
-                <div class="row">2</div>
-                <div class="row">3</div>
+        <div class="container">
+            <div class="row">
+                <div class="col-7">Subscribe</div>
+                <div class="col">Newsletter</div>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-7">Subscribe</div>
-            <div class="col">Newsletter</div>
-        </div>
-        <div class="row">
-            <div class="col-7">1</div>
-            <div class="col">2</div>
+            <div class="row">
+                <div class="col-7">1</div>
+                <div class="col">2</div>
+            </div>
         </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
