--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
 
 <body>
 
-    <div class="container-fluid">
-        <div class="row" style="position: sticky; position: -webkit-sticky; top: 0; background-color: red;">
-            <div class="col-9">Logo</div>
+    <div class="container d-none d-lg-block lg-nav">
+        <div class="row" style="background-color: red;">
+            <div class="col">
+                <div class="row">14• London, GB ></div>
+                <div class="row">Tue, Nov 17, 2020</div>
+            </div>
+            <div class="col-6">Logo</div>
             <div class="col">Login</div>
             <div class="col">Subscribe</div>
-            <div class="col">Nav</div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid nav-tabs">
             <div class="row">
                 <div class="col">U.S</div>
                 <div class="col">World</div>
@@ -40,7 +43,7 @@
                 <div class="col">Search</div>
             </div>
             <div class="row">
-                <div class="col">Trending</div>
+                <div class="col" style="color: black;">Trending</div>
                 <div class="col">Joe Biden</div>
                 <div class="col">Donald Trump</div>
                 <div class="col">2020 Election</div>
@@ -48,160 +51,155 @@
                 <div class="col">Stimulus Package</div>
             </div>
         </div>
+    </div>
+
+    <div class="container-fluid d-lg-none mobile-nav" style="position: fixed; top: 0;">
+        <div class="row">
+            <div class="col-6">Newsweek</div>
+            <div class="col-2">Avatar</div>
+            <div class="col-2"><button>Sub ></button></div>
+            <div class="col-2">Bars icon</div>
+        </div>
+    </div>
 
 
 
 
-        <div class="container" style="margin-top: 20px;">
-            <div class="row">
-                <div class="col">Featured Stories</div>
-                <div class="col">Top Story</div>
-                <div class="col">The Debate</div>
+    <div class="container" style="margin-top: 55px;">
+
+        <div class="row">
+            <div class="col-sm order-sm-2">
+                <div class="row">Top Story</div>
+                <div class="row">1</div>
+
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                    <div class="row">4</div>
-                    <div class="row">5</div>
-                    <div class="row">6</div>
-                    <div class="row">7</div>
-                    <div class="row">8</div>
-                    <div class="row">9</div>
-                    <div class="row">10</div>
-                    <div class="row">11</div>
-                    <div class="row">12</div>
-                </div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">
-                        <div class="col">2</div>
-                        <div class="col">2</div>
-                        <div class="col">2</div>
-                    </div>
-                    <div class="row">
-                        <div class="col">3</div>
-                        <div class="col">3</div>
-                        <div class="col">3</div>
-                    </div>
-                </div>
-                <div class="col">1</div>
+            <div class="col-sm order-sm-1">
+                <div class="row">Featured Stories</div>
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+                <div class="row">4</div>
+                <div class="row">5</div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">Logo - In The Magazine</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">3</div>
-                <div class="col">4</div>
-            </div>
-            <div class="row">
-                <div class="col">5</div>
-                <div class="col">6</div>
-                <div class="col">7</div>
-                <div class="col"></div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">Logo - Editor's Pick</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">3</div>
-                <div class="col">4</div>
-            </div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">3</div>
-                <div class="col">4</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">U.S</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">World</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">Business</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">Tech & Science</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">Culture</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">Sports</div>
-            <div class="row">
-                <div class="col">1</div>
-                <div class="col">2</div>
-                <div class="col">
-                    <div class="row">1</div>
-                    <div class="row">2</div>
-                    <div class="row">3</div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-7">Subscribe</div>
-                <div class="col">Newsletter</div>
-            </div>
-            <div class="row">
-                <div class="col-7">1</div>
-                <div class="col">2</div>
+            <div class="col-sm order-sm-3">
+                <div class="row">The Debate</div>
+                <div class="row">1</div>
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">Logo - In The Magazine</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+        </div>
+        <div class="row">
+            <div class="col">5</div>
+            <div class="col">6</div>
+            <div class="col">7</div>
+            <div class="col"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">Logo - Editor's Pick</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+        </div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">3</div>
+            <div class="col">4</div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">U.S</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">World</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">Business</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">Tech & Science</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">Culture</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">Sports</div>
+        <div class="row">
+            <div class="col">1</div>
+            <div class="col">2</div>
+            <div class="col">
+                <div class="row">1</div>
+                <div class="row">2</div>
+                <div class="row">3</div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-7">Subscribe</div>
+            <div class="col">Newsletter</div>
+        </div>
+        <div class="row">
+            <div class="col-7">1</div>
+            <div class="col">2</div>
+        </div>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
